Fix #31369. Needed some do_versions backward compatibility code to ensure the old file path was split correctly into base path + filename.